--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <a href="code/bbb.html">bbb</a>
     <a href="code/aaa.txt">aaa</a>
     <a href="basic/text.html">text</a>
+    <a href="basic/text2.html">text</a>
+    <a href="basic/list.html">list</a>
+    <a href="basic/quote.html">quote</a>
+    <a href="midia.html/img.html">img</a>
 </body>
 </html>
