--- a/basic/text.html
+++ b/basic/text.html
@@ -6,6 +6,7 @@
     <title>text</title>
 </head>
 <body>
+    
     <h1>text</h1>
     <h1>제목으로 사용</h1>
     <h2>제목으로 사용</h2>
@@ -13,24 +14,32 @@
     <h4>제목으로 사용</h4>
     <h5>제목으로 사용</h5>
     <h6>제목으로 사용</h6>
+   
 
     <!--구분선-->
     <hr />
     <hr color="red" />
     <hr color="#ffoooo" />
+    <hr color="ff0000" size="5" width="400px" align="right" />
 
 
     <!--lorem 의미없는 문장 작성하기 명령어-->
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Blanditiis pariatur cupiditate dolorum impedit nam delectus!
-         Obcaecati earum delectus modi autem voluptatem, ipsam, 
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> 
+        <i>Blanditiis</i> pariatur <small>cupiditate</small> dolorum <sub>impedit</sub> nam <strong>fdedkdk</strong>!
+         <sup>Obcaecati</sup> earum delectus modi autem voluptatem, ipsam, 
          deleniti quas tenetur quaerat optio, numquam alias facilis?
     </P>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Blanditiis pariatur cupiditate dolorum impedit nam delectus!
+        <font color="red">Blanditiis pariatur cupiditate dolorum impedit nam delectus!</font><br>
          Obcaecati earum delectus modi autem voluptatem, ipsam, 
-         deleniti quas tenetur quaerat optio, numquam alias facilis?
+         <font color="blue" size="7" face="consolas">deleniti quas tenetur<b>fdefsl</b> quaerat optio, numquam alias facilis?</font>
     </P>
+
+
+
+
+
+    </p>
 
 
 
