변경사항 확인

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <a href="basic/text2.html">text</a>
     <a href="basic/list.html">list</a>
     <a href="basic/quote.html">quote</a>
-    <a href="midia.html/img.html">img</a>
+    <a href="midia.html/img.html">img1</a>
 </body>
 </html>
