--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <h2>style</h2>
     <a href="style/css.html">css</a>
     <a href="style/default.html">default</a>
+    <a href="style/div3.html">div3</a>
     
     
     <br>
