--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
     <title>html 학습</title>
    
 </head>
+
+    <style>
+        .wrapper{
+            width: 80px;
+            height: 20px;
+            border: 2px solid #ee8a8a;
+        }
+
+    </style>
+
+
+
+
 <body>
     <h1>html_work</h1>
-    <hr>
-    <h2>basic</h2>
-    <a href="code/bbb.html">bbb</a>
-    <a href="code/aaa.txt">aaa</a>
-    <a href="basic/text.html">text</a>
-    <a href="basic/text2.html">text</a>
-    <a href="basic/list.html">list</a>
-    <a href="basic/quote.html">quote</a>
-    <a href="midia/img.html">img1</a>
+    <div class="wrapper">basic
+        <div><a href="code/bbb.html">bbb</a></div>
+         <div><a href="code/aaa.txt">aaa</a>
+        <div><a href="basic/text.html">text</a></div>
+        <div><a href="basic/text2.html">text</a></div>
+        <div><a href="basic/list.html">list</a></div>
+        <div><a href="basic/quote.html">quote</a></div>
+        <div><a href="midia/img.html">img1</a></div>
+    </div>
+
     <br><br>
     <hr>
     <br>
@@ -37,11 +51,19 @@
     <a href="style/css.html">css</a>
     <a href="style/default.html">default</a>
     <a href="style/div3.html">div3</a>
+    <a href="style/05_box2.html">05_box</a>
     
     
     <br>
     <br>
     <hr>
+
+    <a href="selector/01.brother.html">brother</a>
+    <a href="selector/05_struct.html">struct</a>
+    <a href="selector/tetris.html">tetris</a>
+    <a href="selector/04_diary.html">04_diary</a>
+    <a href="selector/07_property.html">07_property</a>
+    <a href="08_status.html/08_status.html">08_status</a>
 
 </body>
 </html>
