--- a/style/div3.html
+++ b/style/div3.html
@@ -12,7 +12,7 @@
 
         .wrapper{
             width: 1000px;
-            height: 200px;
+            height: 500px;
             background-color: #0f0 ;
         }
         .box{
@@ -64,6 +64,101 @@
         }
 
 
+        .pd2{
+            margin: 20px;
+        }
+
+        .bb1{
+            border: 20px solid #ff0000;
+        }
+
+        .bb2{
+            border: 20px dotted #ff0000;
+        }
+
+        .bb3{
+            border: 20px dashed #ff0000;
+        }
+
+        .bb4{
+            border: 20px double #ff0000;
+        }
+        .bb5{
+            border: 20px groove #ff0000;
+        }
+        .bb6{
+            border: 20px ridge #ff0000;
+        }
+        .bb7{
+            border: 20px thin #ff0000;
+        }
+        .bb8{
+            border: 20px solid #1b42df;
+        }
+
+
+
+        .br1{
+            border-radius: 20px;
+        }
+
+        .br2{
+            border-radius: 50px;
+        }
+        .br3{
+            border-radius: 25px 50px;
+        }
+        .br4{
+            border-radius: 50px 0px 10px 20px;
+        }
+        .br5{
+            border-top-left-radius: 50px;
+        }
+
+
+
+        .bm1{
+            
+        }
+
+        .bm2{
+            border-top: 20px ridge rgb(6, 27, 6);
+            border-right: 10px solid #1b42df;
+            border-bottom: 10px double #071444;
+
+        }
+
+        .bm3{
+            border-width: 30px;
+            border-color: beige;
+            border-style: dashed;
+            border-radius: 30px;
+        }
+
+        .bm4{
+            background-image: url(../fff/04.jpg);
+            background-size: 50px;
+            border-top: 50px solid #071444;
+            border-right: 50px solid #29741a;
+            border-bottom: 50px solid rgba(255,0,255,0.5) ;/* 색상 투명도 추가 */     
+        }
+
+
+        .tt1{
+            text-align: right;
+
+        }
+        .tt2{
+            text-align: center;
+        }
+        .tt3{
+            line-height: 100px; /*문자열 1줄의 높이*/
+        }
+        .tt4{
+            line-height: 30px;
+            text-align: center;
+            padding: 20px;
+        }
 
 
 
@@ -87,6 +182,44 @@
         <div class="box pp2">패딩2</div>
         <div class="box pp3">패딩3</div>
         <div class="box pp4">패딩4</div>
+    </div>
+
+    <h3>border</h3>
+    <div class="wrapper">
+        <div class="box pd2 bb1">보더1</div>
+        <div class="box pd2 bb2">보더2</div>
+        <div class="box pd2 bb3">보더3</div>
+        <div class="box pd2 bb4">보더4</div>
+        <div class="box pd2 bb5">보더5</div>
+        <div class="box pd2 bb6">보더6</div>
+        <div class="box pd2 bb7">보더7</div>
+        <div class="box pd2 bb8">보더8</div>
+    </div>    
+
+    <h3>border_radius</h3>
+    <div class="wrapper">
+        <div class="box pd2 br1">보더라운드1</div>
+        <div class="box pd2 br2">보더라운드2</div>
+        <div class="box pd2 br3">보더라운드3</div>
+        <div class="box pd2 br4">보더라운드4</div>
+        <div class="box pd2 br5">보더라운드5</div>
+    </div>
+
+
+    <h3>border_multi</h3>
+    <div class="wrapper">
+        <div class="box pd2 bm1">보더멀티1</div>
+        <div class="box pd2 bm2">보더멀티2</div>
+        <div class="box pd2 bm3">보더멀티3</div>
+        <div class="box pd2 bm4">보더멀티4</div>
+    </div>
+
+    <h3>text</h3>
+    <div class="wrapper">
+        <div class="box pd2 tt1">글자1</div>
+        <div class="box pd2 tt2">글자2<br/>내용2</div>
+        <div class="box pd2 tt3">글자3</div>
+        <div class="box pd2 tt4">글자4<br/>내용2</div>
     </div>
 
 
