--- a/TEST/login.html
+++ b/TEST/login.html
@@ -3,19 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인페이지</title>
+    <title>tetris</title>
+    <style>
+        .tetris-board {
+            width: 200px;
+            height: 400px;
+            background: #222;
+            display: grid;
+            grid-template-rows: repeat(20, 20px);
+            grid-template-columns: repeat(10, 20px);
+            gap: 1px;
+            margin: 30px auto;
+        }
+        .block {
+            width: 20px;
+            height: 20px;
+            box-sizing: border-box;
+        }
+        .typeI { background: #00f0f0; }
+        .typeO { background: #f0f000; }
+        .typeT { background: #a000f0; }
+        .typeS { background: #00f000; }
+        .typeZ { background: #f00000; }
+        .typeJ { background: #0000f0; }
+        .typeL { background: #f0a000; }
+    </style>
 </head>
 <body>
-    <h1> 로그인</h1>
-
-    <fieldset style="width: 300px;">
-     아이디<input type="text" name="id"><br>
-     비밀번호<input type="password" name="pw">
-    </fieldset><br>
-
-    <button>로그인</button>
-    <button>회원가입</button>
-
-    
+    <h1 style="text-align:center;">Tetris Blocks</h1>
+    <div class="tetris-board">
+        <!-- I 블록 예시 (가로 4칸) -->
+        <div class="block typeI" style="grid-row:1; grid-column:1"></div>
+        <div class="block typeI" style="grid-row:1; grid-column:2"></div>
+        <div class="block typeI" style="grid-row:1; grid-column:3"></div>
+        <div class="block typeI" style="grid-row:1; grid-column:4"></div>
+        <!-- O 블록 예시 (2x2) -->
+        <div class="block typeO" style="grid-row:3; grid-column:6"></div>
+        <div class="block typeO" style="grid-row:3; grid-column:7"></div>
+        <div class="block typeO" style="grid-row:4; grid-column:6"></div>
+        <div class="block typeO" style="grid-row:4; grid-column:7"></div>
+        <!-- T 블록 예시 -->
+        <div class="block typeT" style="grid-row:6; grid-column:2"></div>
+        <div class="block typeT" style="grid-row:7; grid-column:1"></div>
+        <div class="block typeT" style="grid-row:7; grid-column:2"></div>
+        <div class="block typeT" style="grid-row:7; grid-column:3"></div>
+        <!-- S 블록 예시 -->
+        <div class="block typeS" style="grid-row:9; grid-column:5"></div>
+        <div class="block typeS" style="grid-row:9; grid-column:6"></div>
+        <div class="block typeS" style="grid-row:10; grid-column:4"></div>
+        <div class="block typeS" style="grid-row:10; grid-column:5"></div>
+        <!-- Z 블록 예시 -->
+        <div class="block typeZ" style="grid-row:12; grid-column:8"></div>
+        <div class="block typeZ" style="grid-row:12; grid-column:9"></div>
+        <div class="block typeZ" style="grid-row:13; grid-column:9"></div>
+        <div class="block typeZ" style="grid-row:13; grid-column:10"></div>
+        <!-- J 블록 예시 -->
+        <div class="block typeJ" style="grid-row:15; grid-column:2"></div>
+        <div class="block typeJ" style="grid-row:16; grid-column:2"></div>
+        <div class="block typeJ" style="grid-row:17; grid-column:2"></div>
+        <div class="block typeJ" style="grid-row:17; grid-column:1"></div>
+        <!-- L 블록 예시 -->
+        <div class="block typeL" style="grid-row:19; grid-column:7"></div>
+        <div class="block typeL" style="grid-row:20; grid-column:7"></div>
+        <div class="block typeL" style="grid-row:21; grid-column:7"></div>
+        <div class="block typeL" style="grid-row:21; grid-column:8"></div>
+    </div>
 </body>
 </html>
