--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <a href="selector/04_diary.html">04_diary</a>
     <a href="selector/07_property.html">07_property</a>
     <a href="08_status.html/08_status.html">08_status</a>
+     <a href="selector/09_gallery.html">09_gallery</a>
+     <a href="selector/10_gallery.html">10_gallery</a>
+     <a href="selector/11_string.html">11_string</a>
+     <a href="selector/12_virtual.html">12_virtual</a>
 
 </body>
 </html>
